<resources>
    <string name="app_name" translatable="false">MentalCounting</string>
    <string name="resetscore">Score reset</string>
    <string name="game">Game</string>
    <string name="score">Score</string>
    <string name="validate">Validate</string>
    <string name="operation_count">Operation Count :</string>
    <string name="win_rate">Win rate :</string>
    <string name="last_operation">Last Operation :</string>
    <string name="back">Back</string>
    <string name="invalid_operator">Invalid Operator</string>
    <string name="resultvalidation">Here\'s your operation</string>
    <string name="GoodAnswer">Good answer</string>
    <string name="WrongAnswer">Wrong answer</string>
    <string name="nouvelle_op_ration">New operation</string>
</resources>