<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ScoreActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/OperationCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/operation_count" />

        <TextView
            android:id="@+id/WinRate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/win_rate" />

        <TextView
            android:id="@+id/LastOperation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/last_operation" />

        <Button
            android:id="@+id/BackButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back"
            android:onClick="GoMain"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>