<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.GameActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/Result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/resultvalidation"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/Operation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="2 + 2 = ?" />

        <EditText
            android:id="@+id/Reponse"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberSigned" />

        <Button
            android:id="@+id/Valider"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/validate" />

        <Button
            android:id="@+id/ResetButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/nouvelle_op_ration" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>